--- a/exercise1.html
+++ b/exercise1.html
@@ -1,7 +1,7 @@
 <html lang="fin">
     <head>
         <meta charset="utf-8">
-        <meta name="Yrjö Kokkonen" content="Yrjö Kokkonen">
+        <meta name="Yrjö Kokkonen" content="Meret">
 <meta name="Merien lämpeneminen löi ennätykset" content="Valtamerten lämpeneminen kiihtyi viime vuonna samalla kun ilmaston lämpeneminenkin pomppasi uusiin lukemiin. 
 Valtamerissä vuosi 2021 oli kuudes peräkkäinen, kun merten keskilämpötila nousi uuteen ennätykseen.">
 <title>Aku Hyvonen_Yle uutiset</title>
