--- a/exercise2.html
+++ b/exercise2.html
@@ -4,9 +4,49 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <meta name="Wikipedia" content="Rush">
+    <meta name="Rush(band)" content="Rush was a Canadian rock band formed in Toronto in 1968">
+    <title>Aku Hyvönen Exercise2</title>
 </head>
 <body>
-    
+
+<header> 
+    <ul>
+        <li><a href="index.html">Home</a></li>
+            <li><a href="aboutus.html">About Us</a></li>
+                <li><a href="projects.html">Projects</a></li>
+            </ul>
+</header>
+<main>
+    <article class="music">
+        <h1>Rush (band)</h1>
+        <p>
+            Rush was a Canadian rock band formed in Toronto in 1968 by Alex Lifeson (guitars, composer), John Rutsey (drums, percussion, lyricist), 
+            and Jeff Jones, who was immediately replaced by Geddy Lee (bass, vocals, keyboards, composer). 
+            After its formation the band went through several lineup configurations before arriving at its 
+            classic power trio lineup with the addition of Neil Peart in July 1974, who replaced 
+            Rutsey four months after the release of their self-titled debut album. 
+            This lineup remained intact for the remainder of the band's career.
+
+            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/46/Rush-in-concert.jpg/267px-Rush-in-concert.jpg" align="right">
+        </p>
+
+        <p>
+            Rush is known for its musicianship, complex compositions, and eclectic lyrical motifs drawing heavily on science fiction, fantasy and philosophy. 
+            The band's style changed over the years, from a blues-inspired hard rock beginning, 
+            later moving into progressive rock, then a period marked by heavy use of synthesizers, 
+            before returning to guitar-driven hard rock since the end of the 1980s. 
+            The members of Rush have been acknowledged as some of the most proficient players on their respective instruments, 
+            with each winning numerous awards in magazine readers' polls.
+        </p>
+        
+    </article>
+
+</main>
+<footer>
+<address>
+    Hämeen ammattikorkeakoulu HAMK PL 230 13101 Hämeenlinna
+</address>
+</footer>
 </body>
 </html>
