created splash folder and other uopdates

--- a/exercise1.html
+++ b/exercise1.html
@@ -1,4 +1,4 @@
-<html lang="fin">
+<html lang="fi">
     <head>
         <meta charset="utf-8">
         <meta name="Yrjö Kokkonen" content="Meret">
@@ -34,7 +34,7 @@ Valtamerissä vuosi 2021 oli kuudes peräkkäinen, kun merten keskilämpötila n
             <p><u>Ilmaston lämpenemisessä iso loikkaus – seitsemän viime vuotta 
                 mittaushistorian lämpimimmät, ero aiempaan "merkittävä"</u></p>
 
-        </p>
+        
         <p>
             marks&lt;b&gt;
             Asiasta kertoo kansainvälinen tutkimus, joka on julkaistu Advances in Athmosperic Sciences (siirryt toiseen palveluun)-tiedelehdessä.
