all done, maybe?

--- a/exercise1.html
+++ b/exercise1.html
@@ -1,11 +1,11 @@
 <html lang="fi">
     <head>
         <meta charset="utf-8">
-        <meta name="Yrjö Kokkonen" content="Meret">
+        <meta name="Yle uutiset" content="Yrjö Kokkonen">
 <meta name="Merien lämpeneminen löi ennätykset" content="Valtamerten lämpeneminen kiihtyi viime vuonna samalla kun ilmaston lämpeneminenkin pomppasi uusiin lukemiin. 
 Valtamerissä vuosi 2021 oli kuudes peräkkäinen, kun merten keskilämpötila nousi uuteen ennätykseen.">
 <title>Aku Hyvonen_Yle uutiset</title>
-
+<link href="css/style.css" rel="stylesheet" type="text/css">
     </head>
     <body>
         <h1>
@@ -20,7 +20,7 @@ Valtamerissä vuosi 2021 oli kuudes peräkkäinen, kun merten keskilämpötila n
         <h2>Meret</h2>
         <h1>Merien lämpeneminen löi ennätykset - tutkijat pohtivat, kuinka paljon meret voivat ottaa enää vastaan lämpöenergiaa</h1>
         <p><b>Meriin varastoitui viime vuonna lämpöenergiaa määrä, joka vastaa maailman vuotuista sähköntuotantoa yli satakertaisesti.</b></p>
-        <img src="https://images.cdn.yle.fi/image/upload/w_720,h_480,ar_1.7783344,dpr_1,c_fill,g_faces/q_auto:eco,f_auto,fl_lossy/13-3-12266908">
+        <img alt="merenranta" src="https://images.cdn.yle.fi/image/upload/w_720,h_480,ar_1.7783344,dpr_1,c_fill,g_faces/q_auto:eco,f_auto,fl_lossy/13-3-12266908">
         
 <p>Recifen kaupungin ranta Brasiliassa. Recife on aloittanut toimet merenpinnan nousun ja eroosion vaikutusten hillitsemiseksi.</p>
 <!--I made this :D-->
