little fixes to splash index

--- a/mozilla_splash/index.html
+++ b/mozilla_splash/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
@@ -99,7 +99,7 @@
   <body>
     <header>
       <h1>Mozilla</h1>
-      <img src ="firefoxlogo120.png">
+      <img alt=" firefox logo" src ="firefoxlogo120.png">
       <!-- insert <img> element, link to the small
           version of the Firefox logo -->
 
@@ -140,7 +140,7 @@
             sizes="(max-width: 120px) 500px, 50vw">
         </a>
         <a href="https://developer.mozilla.org/en-US/">
-          <img src="originals/mdn.svg">
+          <img alt="MDN" src="originals/mdn.svg">
         </a>
         <div class="clearfix"></div>
       </div>
