--- a/exercise1.html
+++ b/exercise1.html
@@ -4,7 +4,7 @@
         <meta name="Yle uutiset" content="Yrjö Kokkonen">
 <meta name="Merien lämpeneminen löi ennätykset" content="Valtamerten lämpeneminen kiihtyi viime vuonna samalla kun ilmaston lämpeneminenkin pomppasi uusiin lukemiin. 
 Valtamerissä vuosi 2021 oli kuudes peräkkäinen, kun merten keskilämpötila nousi uuteen ennätykseen.">
-<title>Aku Hyvonen_Yle uutiset</title>
+<title>Aku Hyvonen Exercise1</title>
 <link href="css/style.css" rel="stylesheet" type="text/css">
     </head>
     <body>
